objects/cic_credit__Credit_Score_Factor__c.object
<CustomObject>
    <fields>
        <fullName>cic_credit__Credit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Report</label>
        <referenceTo>cic_credit__Credit_Report__c</referenceTo>
        <relationshipLabel>Credit Score Factors</relationshipLabel>
        <relationshipName>Credit_Score_Factors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cic_credit__Credit_Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Score</label>
        <referenceTo>cic_credit__Credit_Score__c</referenceTo>
        <relationshipLabel>Credit Score Factors</relationshipLabel>
        <relationshipName>Credit_Score_Factors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cic_credit__Factor_Code__c</fullName>
        <description>creditScoreFactorCode</description>
        <label>Factor Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Factor_Text__c</fullName>
        <description>creditScoreFactorText</description>
        <label>Factor Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cic_credit__Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Co Borrower</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Sequence_Number__c</fullName>
        <description>sequenceNumber</description>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Credit Score Factor</label>
    <nameField>
        <displayFormat>CSF-{000000000}</displayFormat>
        <label>Credit Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Score Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>